# boids

./: .gitignore  CLAUDE.md  CLAUDE_CONTEXT.md  Cargo.toml  index.html
pkg/: boids.d.ts  boids.js  boids_bg.wasm  boids_bg.wasm.d.ts  package.json
src/: boid.rs  bug.rs  lib.rs  predator.rs  spatial.rs  vector.rs  world.rs
