[package]
name = "boids"
version = "0.1.0"
edition = "2021"
authors = ["Avery Opela <averyopela1@gmail.com>"]
description = "High-performance boids flocking simulation in Rust/WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
